# cookmate

./: API.md  Development.md  DevelopmentV0.1.md  DevelopmentV0.2.md  DevelopmentV0.3.md  README.md  pyproject.toml
adapters/cli/: main.py
adapters/repo_memory/: ingredient_repo.py  inventory_repo.py  recipe_repo.py
adapters/repo_sqlite/: db.py  ingredient_repo.py  inventory_repo.py  recipe_repo.py
app/: __init__.py  test_recipe_service.py  unit_of_work.py
app/services/: cook_service.py  planner_service.py  recipe_service.py
cookmate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
domain/ingredient/: model.py  ports.py  repository.py
domain/inventory/: model.py  models.py  repository.py
domain/recipe/: model.py  models.py  ports.py  repository.py
domain/shared/: __init__.py  alue_objects.py  events.py  value_objects.py
infra/: event_bus.py  logging.py
rust-api/: Cargo.toml
rust-api/src/: main.rs
scripts/: dev.sh  init_db.py  recipes_csv.py
tests/: conftest.py  test_api_endpoints.py  test_cook_service.py  test_planner_service.py  test_recipe_service.py
tests/domain/: test_recipe.py
web/api/: deps.py  main.py
web/api/routers/: inventory.py  planner.py  recipe.py
web/frontend/: main.py
web/frontend/static/: index.html
