[project]
name = "cookmate"
version = "0.2.1"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic",
  "typer[all]",
]
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = { find = { where = ["."], include = [
    "app", "app.*",
    "adapters", "adapters.*",
    "domain", "domain.*",
    "infra", "infra.*",
    "web", "web.*"
] } }
